--- a/templates/choice.html
+++ b/templates/choice.html
@@ -11,7 +11,7 @@
 <body>
     <div class="stars"></div>
     <div class="main-wrapper">
-        <h1 class="title">Choose Your Path</h1>
+        <h1 class="title">MODELS OF THE MONTH :</h1>
         <div class="choice-container">
             {% for model in models %}
             <a href="/gallery/{{ model.id }}" class="choice-block">
